--- a/_includes/who-we-are.html
+++ b/_includes/who-we-are.html
@@ -5,11 +5,11 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Who We Are</h2>
                     <h3 class="section-subheading text-muted">
-                        We are a diverse group hailing from multiple departments across the University and beyond.
+                        We are a group that comes from several departments across Aarhus University.
                     </h3>
                 </div>
             </div>
-            <h2 class="section-subheading text-center">Executive council</h2>
+            <h2 class="section-subheading text-center">Instructors</h2>
             {% for member in site.data.admin %}
             {% assign loopindex = forloop.index0 | modulo: 3 %}
             {% if loopindex == 0 %}
