--- a/_includes/events.html
+++ b/_includes/events.html
@@ -29,11 +29,11 @@
                 {% endif %}
               {% endfor %}
               {% if isEvent == 0 %}
-                <a class='eventTitle' href="{{ site.github.issues_url }}">Nothing yet! Propose an event here.</a>
+                <a class='eventTitle' href="{{ site.github.owner_url }}/Events/issues">Nothing yet! Propose an event here.</a>
               {% else %}
               <div class="row">
                     <div class="col-lg-12 text-center">
-                        <a href="{{ site.github.owner_url }}/Events/issues" class="btn btn-xl eventSuggest">Suggest an Event</a>
+                        <a href="{{ site.github.issues_url }}" class="btn btn-xl eventSuggest">Suggest an Event</a>
                         <a href="{{ site.github.url }}/CONTRIBUTING" class="btn btn-xl eventSuggest">How to Lead a Session</a>
                     </div>
               </div>
