--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -28,11 +28,9 @@
                     <li>
                         <a class="page-scroll" href="{{ site.github.url | replace:'http:','https:' }}/#come-say-hi">Contact</a>
                     </li>
-                    <!--
                     <li>
-                        <a class="page-scroll" href="{{ site.github.url | replace:'http:','https:' }}/lessons/">Lesson Content</a>
+                        <a class="page-scroll" href="https://au-oc.github.io/content">Lesson Content</a>
                     </li>
-                    -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
