--- a/_includes/who-we-are.html
+++ b/_includes/who-we-are.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Who We Are</h2>
                     <h3 class="section-subheading text-muted">
-                        We are a group that comes from several departments across Aarhus University. Interested in participating in some way? Check out our <a href="{{ site.github.url }}/CONTRIBUTING" class="btn btn-xl eventSuggest">contributing page</a>.
+                        We are a group that comes from several departments across Aarhus University. Interested in participating in some way? Check out our <a href="{{ site.github.url }}/CONTRIBUTING">contributing page</a>.
                     </h3>
                 </div>
             </div>
