--- a/_includes/events.html
+++ b/_includes/events.html
@@ -7,6 +7,7 @@
                     <h3 class="section-subheading text-muted">
                       Our sessions are held in rooms throughout Aarhus University,
                       so make sure to look at the session details to know where to go.
+                      All material is or should be found on the <a href="https://au-oc.github.io/content/">AUOC content website</a>.
                     </h3>
                 </div>
             </div>
