Include list of past events
Resolves #8

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -8,6 +8,7 @@
                       Our sessions are held in rooms throughout Aarhus University,
                       so make sure to look at the session details to know where to go.
                       All material is or should be found on the <a href="https://au-oc.github.io/content/">AUOC content website</a>.
+                      A list of all previous events and sessions can be found on the <a href="{{ site.github.url | replace:'http:','https:' }}/past-events/">"Past Events" page</a>.
                     </h3>
                 </div>
             </div>
