--- a/_includes/who-we-are.html
+++ b/_includes/who-we-are.html
@@ -9,7 +9,7 @@
                     </h3>
                 </div>
             </div>
-            <h2 class="section-subheading text-center">Instructors</h2>
+            <h2 class="section-subheading text-center">Instructors and Contributors</h2>
             {% for member in site.data.admin %}
             {% assign loopindex = forloop.index0 | modulo: 3 %}
             {% if loopindex == 0 %}
